# SVG2Keynote-lib

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: FindBoost.cmake
cmake_modules/: add_boost.cmake
format_documentation/: format_documentation.md
keynote-protos/: dump-mappings.sh  get-protos.sh
keynote-protos/mapping/: ProtoMapping.cpp  ProtoMapping.h
keynote-protos/other/Numbers/: TNArchives.pb.cc  TNArchives.pb.h  TNArchives.sos.pb.cc  TNArchives.sos.pb.h  TNCommandArchives.pb.cc  TNCommandArchives.pb.h  TNCommandArchives.sos.pb.cc  TNCommandArchives.sos.pb.h
keynote-protos/other/Pages/: TPArchives.pb.cc  TPArchives.pb.h  TPCommandArchives.pb.cc  TPCommandArchives.pb.h  TPCommandArchives.sos.pb.cc  TPCommandArchives.sos.pb.h
keynote-protos/other/protos/: KNArchives.proto  KNArchives.sos.proto  KNCommandArchives.proto  KNCommandArchives.sos.proto  TSACommandArchives.sos.proto  TSCHArchives.GEN.proto  TSCHArchives.proto  TSCHArchives.sos.proto  TSCHCommandArchives.proto  TSCHPreUFFArchives.proto  TSDArchives.sos.proto  TSDCommandArchives.proto  TSSArchives.proto  TSTArchives.sos.proto  TSTCommandArchives.proto  TSWPArchives.sos.proto  TSWPCommandArchives.proto
keynote_lib/: CMakeLists.txt  keynote.cpp  proto_helper.cpp  proto_helper.h  snappy_helper.cpp  snappy_helper.h
keynote_lib/headers/: keynote.h
keynote_lib/lib/nanosvg/: CMakeLists.txt
keynote_lib/lib/nanosvg/src/: nanosvg.h  nanosvg_impl.cpp
keynote_lib/models/SlideObjects/: BaseObject.cpp  BaseObject.h  ShapeObject.cpp  ShapeObject.h  SlideObject.cpp  SlideObject.h  SlideObjectFactory.cpp  SlideObjectFactory.h
keynote_lib/src/key_to_svg/: key_to_svg.cpp  key_to_svg.h  svg_wrapper.cpp  svg_wrapper.h
keynote_lib/src/svg_to_key/: common_message_creation.cpp  common_message_creation.h  nanosvg_helper.cpp  nanosvg_helper.h  shape_creation_repository.cpp  shape_creation_repository.h  svg_to_key.cpp  svg_to_key.h
